# libxml2

./: .gitignore  CLAUDE.md  CMakeLists.txt  Makefile.am  configure.ac  meson.build  runtest.c  test_minimal_parser.c  test_rust_ffi_buf.c
doc/: RUST_PORTING.md  rust-buffer-migration.md
doc/port/: buf.md
doc/port/bugs/: 2025-05-28_heap_buffer_overflow_xmlMemFree.md  2025-05-28_parser_segfault_null_deref.md  2025-05-28_struct_size_mismatch_memory_corruption.md
rust/: Cargo.toml  build.rs
rust/fuzz/: Cargo.toml
rust/fuzz/fuzz_targets/: buf_fuzz.rs
rust/src/: buf.rs  buf_fuzz.rs  lib.rs  memory_stub.c
