[package]
name = "libxml2-buf"
version = "0.1.0"
edition = "2021"

[lib]
name = "xml2buf"
crate-type = ["staticlib"]

[dependencies]
bitflags = "2.4"
libc = "0.2"
arbitrary = { version = "1", optional = true, features = ["derive"] }
libfuzzer-sys = { version = "0.1", optional = true }

[build-dependencies]
cc = "1.0"

[features]
default = []
fuzz = ["arbitrary", "libfuzzer-sys"]